part_2/manifests/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
