part_2/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress

spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80

    - host: app2.com
      http:
        paths:
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80

    - host: app3.com
      http:
        paths:
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: app3
                port:
                  number: 80
